# redis-analyzer

./: .gitignore  Cargo.toml  README.md
src/: analyzer.rs  cli.yml  config.rs  database.rs  key_prefix.rs  main.rs  prefix.rs
src/result_formatters/: json.rs  mod.rs  plain.rs
