[package]
name = "redis-analyzer"
version = "0.3.0"
authors = ["FetLife <dev@fetlife.com>"]
repository = "https://github.com/fetlife/redis-analyzer"
license = "MIT"
description = "Analyzes keys in Redis to produce breakdown of the most frequent prefixes."
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
frequency = "^1.0"
frequency-hashmap = "^1.1"
humantime = "^2.3"
indicatif = "^0.18"
num_cpus = "^1.17"
rayon = "^1.11"
regex = "^1.12"
redis = "^0.32"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
color-eyre = "0.6.5"
