[package]
name = "redis-analyzer"
version = "0.4.0"
authors = ["FetLife <dev@fetlife.com>"]
repository = "https://github.com/fetlife/redis-analyzer"
license = "MIT"
description = "Analyzes keys in Redis to produce breakdown of the most frequent prefixes."
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "^0.18"
num_cpus = "^1.17"
rayon = "^1.11"
regex = "^1.12"
redis = { version = "^0.32", features = ["safe_iterators", "tls-native-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
color-eyre = "0.6.5"
scc = "3.3.4"
